# rag_assistant

./: .gitignore  README.md  config.json  conversations.db  gradio_rag_assistant-multipleproviders.ipynb  gradio_rag_assistant-multipleproviders_Streaming.ipynb  gradio_rag_assistant-multipleproviders_and_gemini.ipynb  gradio_rag_assistant.ipynb  prompt_responses.db  pyproject.toml  pytest.ini  rag_assistant.ipynb  setup.py
.github/workflows/: dev-workflow.yml  python-package.yml  stable-release-workflow.yml
rag_assistant/: .gitignore  RagAssistant.py  __init__.py  config.json  config.yaml  edited_file.txt  gradio_interface.py  gradio_ui.py  main.py  main_1.py
rag_assistant/gradio_tabs/: chat_tab.py  document_edits_tab.py  document_tab.py
rag_assistant/utils/: config_generator.py  configure.py
tests/: import_test.py
