[tool.poetry]
name = "rag_assistant"
version = "0.2.5.dev1"
description = "This repository includes rag_assistant"
authors = ["Jacob Stewart <jacob@swarmauri.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "http://github.com/swarmauri/rag_assistant"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
gradio = "==5.1.0"
swarmauri = "==0.5.1"
PyMuPDF = "*"

[tool.poetry.dev-dependencies]
flake8 = "^7.0"  # Add flake8 as a development dependency
pytest = "^8.0"  # Ensure pytest is also added if you run tests
pytest-asyncio = ">=0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rag_assistant = "rag_assistant.main:main"

[tool.pytest.ini_options]
norecursedirs = ["combined", "scripts"]

log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

asyncio_default_fixture_loop_scope = "function"
